# apc

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  README.md
agentos-browserd/: README.md
agentos-browserd/scripts/: build.sh  lib.sh  package-runtime.sh
agentos-compositor/: Cargo.toml
agentos-compositor/src/: bitmap.rs  browser.rs  cursor.rs  font.rs  grabs.rs  input.rs  main.rs  mcp.rs  mcp_dispatch.rs  render.rs  state.rs  taskbar.rs
agentos-host/: Cargo.toml  build.rs
agentos-host/src/: app.rs  display.rs  fs_server.rs  headless.rs  input.rs  krun_ffi.rs  main.rs  mcp.rs  mcp_capture.rs  mcp_http.rs  mcp_stdio.rs  slirp.rs  vm.rs
agentos-host/src/app/: delegate.rs  mod.rs  view.rs
agentos-host/src/input/: keyboard.rs  keymap.rs  mod.rs  mouse.rs  types.rs
agentos-protocol/: Cargo.toml
agentos-protocol/src/: fs.rs  lib.rs  screenshot.rs
apc-host/: Cargo.toml  build.rs
apc-host/src/: fs_server.rs  headless.rs  main.rs  mcp.rs  mcp_capture.rs  mcp_host.rs  mcp_http.rs  mcp_stdio.rs  vm.rs
apc-host/src/app/: delegate.rs
apc-host/src/input/: mod.rs
guest/: build-compositor.sh  build-fuse.sh  build.sh
guest/rootfs/etc/fonts/: local.conf
guest/rootfs/etc/udev/rules.d/: 90-agentos-input.rules
guest/rootfs/home/agentos/: .bashrc
