[workspace]
members = ["agentos-host", "agentos-compositor", "agentos-protocol"]
default-members = ["agentos-host", "agentos-protocol"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
agentos-protocol = { path = "agentos-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
