[package]
name = "agentos-compositor"
version = "0.1.0"
edition.workspace = true

[dependencies]
agentos-protocol.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
calloop = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "desktop",
    "renderer_gl",
    "renderer_pixman",
    "wayland_frontend",
] }
drm = "0.14"
drm-fourcc = "2"
libc = "0.2"
rustix = { version = "1", features = ["fs"] }
png = "0.17"
base64 = "0.22"
xcursor = "0.3"
fontdue = "0.9"
