[package]
name = "apc-host"
version = "0.1.0"
edition.workspace = true

[dependencies]
apc-protocol.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
serde.workspace = true
libc = "0.2"
base64 = "0.22"
png = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSError",
    "NSNotification",
    "NSObject",
    "NSString",
    "NSThread",
    "NSURL",
    "NSValue",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
] }
objc2-quartz-core = { version = "0.3", features = [
    "CALayer",
    "objc2-core-foundation",
] }
